--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tinder for developers",
   "main": "index.js",
   "scripts": {
-   "dev":"nodemon src/app.js"
+    "dev": "nodemon src/app.js"
   },
   "keywords": [
     "node",
@@ -14,6 +14,7 @@
   "author": "Saurabh Kumar",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mongoose": "^8.8.0"
   }
 }
